# fluendo-plugin

./: .gitignore  README.md  how_to_test.txt  meson.build
src/: gst_plugin.c  gstplugin.c  gstplugin.h  gstplugin_old.c  meson.build
test/: test.txt
